--- a/cmdliner.opam
+++ b/cmdliner.opam
@@ -1,7 +1,20 @@
-version: "1.0.4"
+version: "1.1.1"
+opam-version: "2.0"
+name: "cmdliner"
 synopsis: """Declarative definition of command line interfaces for OCaml"""
-description: """\
-
+maintainer: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
+authors: ["The cmdliner programmers"]
+homepage: "https://erratique.ch/software/cmdliner"
+doc: "https://erratique.ch/software/cmdliner/doc"
+dev-repo: "git+https://erratique.ch/repos/cmdliner.git"
+bug-reports: "https://github.com/dbuenzli/cmdliner/issues"
+license: ["ISC"]
+tags: ["cli" "system" "declarative" "org:erratique"]
+depends: ["ocaml" {>= "4.08.0"}]
+build: [[ make "all" "PREFIX=%{prefix}%" ]]
+install: [[make "install" "LIBDIR=%{_:lib}%" "DOCDIR=%{_:doc}%"]
+         [make "install-doc" "LIBDIR=%{_:lib}%" "DOCDIR=%{_:doc}%"]]
+description: """
 Cmdliner allows the declarative definition of command line interfaces
 for OCaml.
 
@@ -15,18 +28,5 @@ Cmdliner has no dependencies and is distributed under the ISC license.
 
 [1]: http://pubs.opengroup.org/onlinepubs/009695399/basedefs/xbd_chap12.html
 [2]: http://www.gnu.org/software/libc/manual/html_node/Argument-Syntax.html
-"""
-opam-version: "2.0"
-maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
-authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
-homepage: "http://erratique.ch/software/cmdliner"
-doc: "http://erratique.ch/software/cmdliner/doc/Cmdliner"
-dev-repo: "git+http://erratique.ch/repos/cmdliner.git"
-bug-reports: "https://github.com/dbuenzli/cmdliner/issues"
-tags: [ "cli" "system" "declarative" "org:erratique" ]
-license: "ISC"
-depends:[ "ocaml" {>= "4.03.0"} ]
-build: [[ make "all" "PREFIX=%{prefix}%" ]]
-install:
-[[make "install" "LIBDIR=%{_:lib}%" "DOCDIR=%{_:doc}%" ]
- [make "install-doc" "LIBDIR=%{_:lib}%" "DOCDIR=%{_:doc}%"  ]]
+
+Home page: http://erratique.ch/software/cmdliner"""
